# ADN-Monitor

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  README_es.md  pyproject.toml  release-please-config.json  start.sh
.cursor/rules/: pull-requests.mdc
.github/: release.sh  stable-release.sh
.github/workflows/: release-please-dry-run.yml  release-please.yml  release-pr-check.yml  release.yml
backend/: .env.example  composer.json
backend/public/: .htaccess  index.php  router.php
examples/: adn-monitor.service  hotspot-proxy.service  nginx-adn-monitor.conf
examples/systemd/: adn-monitor.service
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/handbook/: bg.md  ca.md  de.md  el.md  en.md  es.md  et.md  fr.md  it.md  nl.md  pl.md  pt.md  sr.md  th.md  tr.md  uk.md  zh.md
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ActiveQsoBox.tsx  Footer.tsx  LinkedSystemsCards.tsx  NewsMarquee.tsx  PurgeDynamicTgsButton.tsx  QrzLink.tsx  TableCaptionTitle.tsx  TgChipGroup.tsx  UiZoomControl.tsx
frontend/src/context/: DashboardConfigContext.tsx  LiveConnectedContext.tsx
frontend/src/hooks/: useDeferStreamDisplay.ts  useWebSocket.ts
frontend/src/locales/: bg.json  ca.json  de.json  el.json  en.json  es.json  et.json  fr.json  it.json  nl.json  pl.json  pt.json  sr.json  th.json  tr.json  uk.json  zh.json
frontend/src/pages/: BridgeList.tsx  Calc.tsx  Console.tsx  Dashboard.tsx  Help.tsx  LastHeardLog.tsx  Login.tsx  Monitor.tsx  OpenBridge.tsx  RadioManual.tsx  SelfService.tsx  StaticTg.tsx  Systems.tsx  TgList.tsx  TopTg.tsx  WorldServersStatus.tsx
frontend/src/utils/: elapsedTime.ts  uiZoom.ts
monitor/: adn-mon.yaml.example  adn-monitor.yaml.example  db_bootstrap.py  monitor.py  requirements.txt  run.sh
monitor/src/adn_monitor/: __init__.py  cli.py  version.py
monitor/tests/: test_alias_bulk_import.py  test_alias_files_sync.py  test_alias_repository_cache.py  test_aliases_config.py  test_aliases_list_use_cases.py  test_auth_use_cases.py  test_clean_te.py  test_client_ip.py  test_dashboard_state.py  test_dashboard_ws.py  test_db_maintenance.py  test_db_reconnect.py  test_dynamic_tg_reload.py  test_env_loader.py  test_fastapi_app.py  test_ingest_config.py  test_obp_stream_dedup.py  test_peer_options_merge.py  test_report_legacy.py  test_report_mapper.py  test_report_process.py  test_rts_display_slot.py  test_schema.py  test_schema_migration_006.py  test_self_service_options.py  test_self_service_use_cases.py  test_time_utils.py  test_version.py  test_voice_log_dedupe.py  test_ws_ctable_views.py  test_ws_hub.py  test_ws_hub_broadcast.py
monitor/tests/domain/: test_peer_rf.py
proxy/: README.md  adn-proxy.example.yaml  proxy.py  requirements.txt
scripts/: check_lnksys_and_restart.py
(+119 files in other folders)
