# ADN Monitor
# GPL v3. Derived from FDMR Monitor / HBMonv2 / hbmonitor3 / HBmonitor.
# Version: bumped by Release Please (Release PR → master → tag v*).

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adn-monitor"
version = "2.0.0-rc.6"
description = "ADN Systems Monitor (FastAPI dashboard + report ingest)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "twisted>=22.0",
    "autobahn>=23.0",
    "mysqlclient>=2.2.0",
    "fastapi>=0.110",
    "itsdangerous>=2.1",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
adn-monitor = "adn_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["monitor/src"]

[tool.pytest.ini_options]
pythonpath = ["monitor/src"]
testpaths = ["monitor/tests"]
