# ADN Monitor
# GPL v3. Derived from FDMR Monitor / HBMonv2 / hbmonitor3 / HBmonitor.
# Version: bumped automatically by python-semantic-release (.github/workflows/release.yml).

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adn-monitor"
version = "2.0.0"
description = "ADN Systems Monitor (FastAPI dashboard + report ingest)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "twisted>=22.0",
    "autobahn>=23.0",
    "mysqlclient>=2.2.0",
    "fastapi>=0.110",
    "itsdangerous>=2.1",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
adn-monitor = "adn_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["monitor/src"]

[tool.pytest.ini_options]
pythonpath = ["monitor/src"]
testpaths = ["monitor/tests"]

[tool.semantic_release]
build_command = ""
tag_format = "v{version}"
commit_message = "chore(release): {version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "frontend/package.json:version",
  "README.md:**Version",
  "README_es.md:**Versión",
]

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = false

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
mode = "update"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
